# fairtool_2

./: .gitignore  README.md  backup_parsed_output_to_dict.py  gamess.py  pyproject.toml  pytest.ini  requirements.txt  test.py
.github/: FUNDING.yml  mkdocs_config_path.txt  trigger-docs-deploy.txt
.github/scripts/: generate_and_build_mkdocs.py  generate_mkdocs.py
.github/workflows/: deploy-docs.yml  python-app.yml
2_spinstates/: CONTCAR  DOSCAR  EIGENVAL  IBZKPT  INCAR  KPOINTS  OSZICAR  OUTCAR_0.0_-2.83  OUTCAR_0.0_2.83  PCDAT  POSCAR  POTCAR  PROCAR  XDATCAR  dump  dump_new  encounteredErrors.tmp  lobsterout  log0_spins_CsHgAgCl_0.0_-2.83  log0_spins_CsHgAgCl_0.0_2.83  testdump  testdump3  vasp.sub
2_spinstates/fair/: vasprun_parsed.json
2_spinstates/fair_output/parsed/: vasprun_parsed.json  vasprun_report.md
documentation/: macros.py  mkdocs.yml  pyproject.toml
documentation/docs/: README.md  run_program_section.md
documentation/docs/calculations/materials/: README.md
documentation/docs/js/: structure.js
documentation/docs/stylesheets/: extra.css
documentation/material/overrides/: home.html  index.html  main.html
fair/: vasprun_parsed.json
fairtool/: analyze.py  cli.py  parse.py  summarize.py  visualize.py
tests/: reference_data.json  test_cli.py  test_parse_fairtime.py  test_parse_real_example.py  test_summarize_real_example.py
tests/VASP/Advanced/example04/: fair-structure.json  fair_parsed_vasprun.json  fair_summarized_vasprun.md
tests/VASP/Advanced/example05/: fair-structure.json  fair_parsed_vasprun.json  fair_summarized_vasprun.md
(+18 files in other folders)
