[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "fairtool"
version = "0.1.0"
authors = [
  { name="Ravindra Shinde", email="r.l.shinde@utwente.nl" },
]
description = "A CLI tool for FAIR processing of computational materials science data."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "lxml==5.1.1",	# Lexical XML
    "numpy>=1.22",	# The Great Python library
    "msgpack==0.6.2",	# Binary Serialization in python
    "nomad-lab>=1.2.1", # Backend for parsing output files
    "typer>=0.20.0",    # CLI framework with rich support
    "mkdocs-material",  # Running the visualization on the localhost
]


[tool.setuptools.packages.find]
where = ["."]

[project.urls]
"Homepage" = "https://github.com/neelravi/fairtool"
"Bug Tracker" = "https://github.com/neelravi/fairtool/issues"

# This makes the `fair` command available after installation
[project.scripts]
fair = "fairtool.cli:app"

